Build proxy host url concatenating